<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SaveSumFragment"
    android:background="@color/default_background_color">

    <TextView
        android:id="@+id/saveSummaryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/save_summary"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:fontFamily="@font/anonymous_pro"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterSummaryNameLayout"
        app:layout_constraintTop_toBottomOf="@id/saveSummaryTv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_name"
            android:id="@+id/enterSummaryNameEt"
            android:textColorHint="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/enterSummaryNameLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="this is some test asdasdsdddddddddddddddddddddddddddddddddddddddddddddddddddddd"
            android:textStyle="bold"
            android:fontFamily="@font/anonymous_pro"
            android:textSize="23sp"
            android:gravity="center_vertical"
            android:id="@+id/summaryTextSaveTv"
            android:textColor="@color/black"/>

        <Button
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:backgroundTint="@color/default_btn_color"
            android:fontFamily="@font/anonymous_pro"
            android:id="@+id/saveBtn"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>